apps/mealie/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.11.0
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /app/data
              name: data
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
          startupProbe:
            tcpSocket:
              port: 9000
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            tcpSocket:
              port: 9000
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            tcpSocket:
              port: 9000
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 3
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data
