apps/mealie/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: mealie
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
